[tool.poetry]
name = "tuchandra.github.io"
version = "0.1.0"
description = "Configuration for my personal website, made with a pure Python static site generator"
authors = ["Tushar Chandra <me@tusharc.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
commonmark = "^0.8.1"
mypy = "0.750"
# black = {version = "^19.10b0",allow-prereleases = true}

black = {version = "^19.10b0", allow-prereleases = true}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
